--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-   "name": "rc-menu",
-   "version": "7.4.23",
+   "name": "rnb-rc-menu",
+   "version": "7.4.24",
    "description": "menu ui component for react",
    "keywords": [
       "react",
@@ -39,6 +39,7 @@
       "start": "rc-tools run server",
       "start:preact": "DEMO_ENV=preact rmc-tools run server",
       "pub": "rc-tools run pub --babel-runtime",
+      "lint": "rc-tools run lint",
       "lint:fix": "rc-tools run lint --fix",
       "test": "jest",
       "prepublish": "rc-tools run guard",
@@ -84,7 +85,5 @@
       "rc-util": "^4.1.0",
       "resize-observer-polyfill": "^1.5.0"
    },
-   "pre-commit": [
-      "lint"
-   ]
+   "pre-commit": []
 }
